# lvgl_sdl2_linux

./: CMakeLists.txt  Makefile  README.md  lv_conf.h  lv_drv_conf.h  main.c  main.h
